# tp-rust

./: README.md
tp1/src/: main.rs
tp2/src/: main.rs
tp4-gestionfichier/: Cargo.toml
tp5-journalisation/: Cargo.toml
tp5-journalisation/src/: main.rs
tp7/: Cargo.toml
tp7/src/: client.rs  dns_message.rs  main.rs  server.rs
tp8/: Cargo.toml
tp8/src/: client.rs  lib.rs  protocol.rs  server.rs
